samples/_failures_safe/1761254945_9a6db4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78e06d2a.c: In function ‘main’:
./samples/SAFE/__tmp_78e06d2a.c:150:28: error: missing terminating " character
  150 |                     printf("Error: Cannot multiply
      |                            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_78e06d2a.c:150:21: error: expected expression at end of input
  150 |                     printf("Error: Cannot multiply
      |                     ^~~~~~
./samples/SAFE/__tmp_78e06d2a.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78e06d2a.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78e06d2a.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78e06d2a.c:150:21: error: expected declaration or statement at end of input
